
    Change the metadata format to a single YAML file, with a slightly
    different internal representation, whose default location is
    docs/docknot.yaml.  The new docknot update command (or the
    App::DocKnot::Update module) will convert from the old JSON format.
    The new metadata format is checked against a schema when read.
    DocKnot now depends on YAML::XS and Kwalify.

    Drop support for the support.cpan metadata key, since the CPAN RT
    instance is going away.  For packages with support.cpan set, if
    vcs.github was set and support.github was not, set support.github to
    match vcs.github during a docknot update.

    Drop the current version number from the title of README.md.  This is
    not a common practice and doesn't seem to add much value.

    Word wrap numeric lists and, in Markdown output, quoted paragraphs.
    Previously these preserved the original spacing from the input text
    snippets.

    Require paragraphs be indented by at least six spaces, not five, to be
    treated as verbatim paragraphs and left unwrapped.  (Markdown
    paragraphs can still use four spaces because they are wrapped in
    markup lines.)

DocKnot 3.05 (2020-08-09)

    Change the heuristic for when to refrain from wrapping output
    paragraphs to require they start with three short lines rather than
    two, ignore the indentation, and increase the threshold for a short
    line to 45 characters from 40.

    Force the badge for the Debian version in README.md to point to
    unstable rather than stable.

    Depend on JSON::MaybeXS instead of JSON, and List::SomeUtils instead
    of List::MoreUtils.

    Update to rra-c-util 8.3:

    * Fix style issues caught by Perl::Critic::Freenode.
    * Ignore debian/changelog when checking for obsolete strings.

DocKnot 3.04 (2020-05-16)

    Change the vcs.travis metadata key to vcs.status.travis.  This will
    require changes to all templates and package metadata.json files that
    use this key.
