@@ -31,8 +31,8 @@ REQUIREMENTS
   configure.ac or any of the m4 files it includes and need to regenerate
   configure or config.h.in, you will need Autoconf [% build.autoconf %] or
   later.[% IF build.manpages %]  Perl is also required to generate manual
-  pages from a fresh Git checkout.[% END %][% IF bootstrap %]
-[% indent(to_text(bootstrap), 2) %][% END %]
+  pages from a fresh Git checkout.[% END %][% IF build.bootstrap %]
+[% indent(to_text(build.bootstrap), 2) %][% END %]
 [% END %][% IF build.type == 'Module::Build' %]
 BUILDING AND INSTALLATION
 
